# svm_diagnosis

./: .gitignore  README.md  pyproject.toml  setup.py
Docker/app_linux/: build.sh  pull.sh  push.sh  run.sh
Docker/app_windows/: build.sh  pull.sh  push.sh  run.sh
Docker/cpu/: Dockerfile  build.sh  pull.sh  push.sh  run.sh
Docker/ipc_cpu/: Dockerfile  build.sh  pull.sh  push.sh  run.sh
model/: oc_svm_model.pkl
svm-diagnosis/: __init__.py  svm.py
svm_diagnosis/: __init__.py  knn.py  ocsvm.py  svm_model.py
tests/: test_fit.py  test_kknn.py  test_svm.py
