[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "svm_diagnosis"
version = "0.1.0"
description = "A fault detection system using One-Class SVM for image classification"
readme = "README.md"
authors = [{ name = "Yu Wei. Chang", email = "uwe90711@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "opencv-python",
    "joblib"  # Required for saving/loading SVM model
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["svm_diagnosis"]

[project.urls]
Homepage = "https://github.com/uwe77/svm_diagnosis.git"
Repository = "https://github.com/uwe77/svm_diagnosis.git"
